--- a/project/company.html
+++ b/project/company.html
@@ -73,42 +73,42 @@
 
             <section>
 
-                <div class="title mb-20">추천 인재</div>
-                <div class="best-injae">
+                <div class="div-recommendation mb-20">추천 인재</div>
+                <div class="div-recommendation-people">
                     <div>
                         <div class="company-people-image1"></div>
-                        <div class="text1">뽑아주세요.
+                        <div class="div-recommendation-text-1">뽑아주세요.
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">류재성</div>
+                        <div class="div-recommendation-text-2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image2"></div>
-                        <div class="text1">뽑아주세요.
+                        <div class="div-recommendation-text-1">뽑아주세요.
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">류재성</div>
+                        <div class="div-recommendation-text-2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image3"></div>
-                        <div class="text1">뽑아주세요.
+                        <div class="div-recommendation-text-1">뽑아주세요.
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">류재성</div>
+                        <div class="div-recommendation-text-2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image3"></div>
-                        <div class="text1">뽑아주세요.
+                        <div class="div-recommendation-text-1">뽑아주세요.
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">류재성</div>
+                        <div class="div-recommendation-text-2">류재성</div>
                     </div>
                     <div>
                         <div class="company-people-image3"></div>
-                        <div class="text1">뽑아주세요.
+                        <div class="div-recommendation-text-1">뽑아주세요.
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">류재성</div>
+                        <div class="div-recommendation-text-2">류재성</div>
                     </div>
 
                 </div>
@@ -118,38 +118,27 @@
             <hr>
 
             <table class="table">
-                <div class="title mb-20">구직자 정보</div>
+                <div class="div-recommendation mb-20">구직자 정보</div>
 
                 <th>이름</th>
                 <th>구직자 정보</th>
                 <th>이력서</th>
 
                 <tr>
-                    <td>홍길동</td>
+                    <td class="div-recommendation-text-2">홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
                         <button class="btn btn-outline-body">이력서보기</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>홍길동</td>
+                    <td class="div-recommendation-text-2">홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-body">이력서보기</button>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
                         <button class="btn btn-outline-body">이력서보기</button>
@@ -157,40 +146,10 @@
                 </tr>
 
                 <tr>
-                    <td>홍길동</td>
+                    <td class="div-recommendation-text-2">홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-body">이력서보기</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-body">이력서보기</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
-                    </td>
-                    <td>
-                        <button class="btn btn-outline-body">이력서보기</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>홍길동</td>
-                    <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
                         <button class="btn btn-outline-body">이력서보기</button>
@@ -198,20 +157,61 @@
                 </tr>
 
                 <tr>
-                    <td>홍길동</td>
+                    <td class="div-recommendation-text-2">홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
                         <button class="btn btn-outline-body">이력서보기</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>홍길동</td>
+                    <td class="div-recommendation-text-2">홍길동</td>
                     <td>
-                        <div class="text1">서비스업,고객센터</div>
-                        <div class="text2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="div-recommendation-text-2">홍길동</td>
+                    <td>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="div-recommendation-text-2">홍길동</td>
+                    <td>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="div-recommendation-text-2">홍길동</td>
+                    <td>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-body">이력서보기</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="div-recommendation-text-2">홍길동</td>
+                    <td>
+                        <div class="div-recommendation-text-1">서비스업,고객센터</div>
+                        <div class="div-recommendation-text-2">맡은 업무에 항상 최선을 다하는 인재입니다.</div>
                     </td>
                     <td>
                         <button class="btn btn-outline-body">이력서보기</button>
@@ -238,14 +238,14 @@
     <!-- 풋터 start -->
     <div>
         <div class="bg-light p-5 text-center">
-            <div class="footer-top d-flex justify-content-between">
+            <div class="div-footer-top d-flex justify-content-between">
                 <div>회사소개</div>
                 <div>이용약관</div>
                 <div>개인정보 처리방침</div>
                 <div>고객센터</div>
             </div>
 
-            <div class="help">
+            <div>
                 <div>고객센터 : 02-1574-1574 (평일 09:00 - 18:00, 주말 공휴일 휴무)</div>
                 <div>이메일 : help@jobplan.co.kr FAX : 02-1574-1575 </div>
                 <div>(주)잡플랜 : 부산광역시 부산진구 중앙대로 749 3층, 대표 최주호</div>
