--- a/project/index.html
+++ b/project/index.html
@@ -67,36 +67,36 @@
 
         <!-- 광고 창 start -->
         <div class="div-addimage">
-            <section>
+            <section class="section-body">
                 <div class="div-ad-img1"></div>
             </section>
             <!-- 광고 창 end -->
 
             <!-- 추천 채용 정보 start -->
-            <section>
+            <section class="section-body">
 
-                <div class="title mb-20">추천 채용 정보</div>
-                <div class="img-box">
+                <div class="div-recommendation mb-20">추천 채용 정보</div>
+                <div class="div-recommendation-img">
                     <div>
-                        <div class="img1"></div>
-                        <div class="text1">회사정보
+                        <div class="div-recommendation-img-1"></div>
+                        <div class="div-recommendation-text-1">회사정보
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
                     <div>
-                        <div class="img2"></div>
-                        <div class="text1">회사정보
+                        <div class="div-recommendation-img-2"></div>
+                        <div class="div-recommendation-text-1">회사정보
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
                     <div>
-                        <div class="img3"></div>
-                        <div class="text1">회사정보
+                        <div class="div-recommendation-img-3"></div>
+                        <div class="div-recommendation-text-1">회사정보
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
                 </div>
@@ -106,95 +106,95 @@
 
             <hr>
 
-            <section>
-                <div class="jop-more">
-                    <div class="title mb-20">채용 정보</div>
+            <section class="section-body">
+                <div class="div-jop-more">
+                    <div class="div-recommendation mb-20">채용 정보</div>
                     <a href="" class="text-body">
-                        <h5>더보기</h5>
+                        <h6>더보기</h6>
                     </a>
                 </div>
 
 
 
-                <div class="company-box">
+                <div class="div-recommendation-box">
 
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
-                    </div>
-
-                    <div class="company">
-                        <div class="company-img1"></div>
-                        <div class="btn-like">
-                            <div class="text1">회사정보
-                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
-                            </div>
-                        </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
-                    <div class="company">
-                        <div class="company-img1"></div>
+                    <div>
+                        <div class="div-company-img-1"></div>
                         <div class="btn-like">
-                            <div class="text1">회사정보
+                            <div class="div-recommendation-text-1">회사정보
                                 <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                             </div>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
+                    </div>
+
+                    <div>
+                        <div class="div-company-img-1"></div>
+                        <div class="btn-like">
+                            <div class="div-recommendation-text-1">회사정보
+                                <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
+                            </div>
+                        </div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
                 </div>
             </section>
@@ -210,14 +210,14 @@
     <!-- 풋터 start -->
     <div>
         <div class="bg-light p-5 text-center">
-            <div class="footer-top d-flex justify-content-between">
+            <div class="div-footer-top d-flex justify-content-between">
                 <div>회사소개</div>
                 <div>이용약관</div>
                 <div>개인정보 처리방침</div>
                 <div>고객센터</div>
             </div>
 
-            <div class="help">
+            <div>
                 <div>고객센터 : 02-1574-1574 (평일 09:00 - 18:00, 주말 공휴일 휴무)</div>
                 <div>이메일 : help@jobplan.co.kr FAX : 02-1574-1575 </div>
                 <div>(주)잡플랜 : 부산광역시 부산진구 중앙대로 749 3층, 대표 최주호</div>
