--- a/project/list.html
+++ b/project/list.html
@@ -63,37 +63,37 @@
 
         <!-- 광고 창 start -->
         <div class="div-addimage">
-            <section>
+            <section class="section-body">
                 <div class="div-ad-img1"></div>
             </section>
             <!-- 광고 창 end -->
 
             <!-- 바디 start -->
 
-            <section>
+            <section class="section-body">
 
-                <div class="title mb-20">추천 채용 정보</div>
-                <div class="img-box">
+                <div class="div-recommendation mb-20">추천 채용 정보</div>
+                <div class="div-recommendation-img">
                     <div>
-                        <div class="img1"></div>
-                        <div class="text1">회사정보
+                        <div class="div-recommendation-img-1"></div>
+                        <div class="div-recommendation-text-1">회사정보
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
                     <div>
-                        <div class="img2"></div>
-                        <div class="text1">회사정보
+                        <div class="div-recommendation-img-2"></div>
+                        <div class="div-recommendation-text-1">회사정보
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
                     <div>
-                        <div class="img3"></div>
-                        <div class="text1">회사정보
+                        <div class="div-recommendation-img-3"></div>
+                        <div class="div-recommendation-text-1">회사정보
                             <span><a href="" class="text-body"><i class="fa-regular fa-star"></i></a></span>
                         </div>
-                        <div class="text2">회사정보</div>
+                        <div class="div-recommendation-text-2">회사정보</div>
                     </div>
 
                 </div>
@@ -101,9 +101,9 @@
             </section>
 
             <hr>
-            <div class="job-menu">
+            <div class="div-job-sector">
                 <div>
-                    <div class="title">지역별</div>
+                    <div class="div-recommendation">지역별</div>
                     <a href="#" class="text-body">서울</a>
                     <a href="#" class="text-body">경기</a>
                     <a href="#" class="text-body">인천</a>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div>
-                    <div class="title">업종별</div>
+                    <div class="div-recommendation">업종별</div>
                     <a href="#" class="text-body">외식,음료</a>
                     <a href="#" class="text-body">유통,판매</a>
                     <a href="#" class="text-body">문화,여가,생활</a>
@@ -156,7 +156,7 @@
             <hr>
 
 
-            <div class="title mb-20">채용 정보</div>
+            <div class="div-recommendation mb-20">채용 정보</div>
 
             <table class="table">
                 <th>지역</th>
@@ -167,64 +167,64 @@
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
 
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
                 <tr>
                     <td>서울</td>
                     <td><a href="#" class="text-body">2024 샘표식품 각 부문 수시 채용</a></td>
-                    <th>09:00-18:00</th>
+                    <td>09:00-18:00</td>
                     <td>최저시급</td>
                 </tr>
             </table>
@@ -247,14 +247,14 @@
     <!-- 풋터 start -->
     <div>
         <div class="bg-light p-5 text-center">
-            <div class="footer-top d-flex justify-content-between">
+            <div class="div-footer-top d-flex justify-content-between">
                 <div>회사소개</div>
                 <div>이용약관</div>
                 <div>개인정보 처리방침</div>
                 <div>고객센터</div>
             </div>
 
-            <div class="help">
+            <div>
                 <div>고객센터 : 02-1574-1574 (평일 09:00 - 18:00, 주말 공휴일 휴무)</div>
                 <div>이메일 : help@jobplan.co.kr FAX : 02-1574-1575 </div>
                 <div>(주)잡플랜 : 부산광역시 부산진구 중앙대로 749 3층, 대표 최주호</div>
